fixed spacing

--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -16,9 +16,10 @@
 }
 
 .product {
-    width: 100%;
     display: flex;
     flex-direction: column;
+
+    width: 100%;
 
     @media (min-width: 800px) {
         width: 50%;
@@ -67,7 +68,7 @@
     width: 100%;
 }
 
-.product__buy-menu__interactive__amount-text-area{
+.product__buy-menu__interactive__amount{
     border: 1px solid #000000;
     border-radius: 5px;
     flex-grow: 1;
@@ -77,6 +78,17 @@
 }
 
 .product__buy-menu__interactive__button{
+    border: 1px solid #000000;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0.5em;
+    font-size: $fontsizeL;
+}
+
+.product__buy-menu__interactive__button--right-space{
     border: 1px solid #000000;
     border-radius: 5px;
     display: flex;
@@ -97,4 +109,13 @@
     height: $fontsizeL;
     width: $fontsizeL;
     margin-right: 0.5em;
+}
+
+.cart__product__image-wrapper {
+    padding: 0 $spacingS;
+}
+
+.cart__product__content {
+    padding: 0 $spacingS;
+    width: 100%;
 }
